# persona-studio

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  pyrightconfig.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: celebrity-harvester.md  persona-baek-sun-ah.md  persona-ju-ji-hoon.md  persona-sample_private.md
.claude/commands/: create-persona.md  persona-refine.md  persona-setup.md  persona-studio.md  simulate-debate-team-ralph.md  simulate-debate-team.md  simulate-debate.md  simulate-meeting-team-ralph.md  simulate-meeting-team.md  simulate-meeting.md
.githooks/: pre-commit
agents/: celebrity-harvester.md  persona-dhh.md  persona-naval_ravikant.md  persona-paul_graham.md
commands/: create-persona.md  persona-refine.md  persona-setup.md  simulate-debate-team-ralph.md  simulate-debate-team.md  simulate-debate.md  simulate-meeting-team-ralph.md  simulate-meeting-team.md  simulate-meeting.md  studio.md
data/people/ju-ji-hoon/: mode
docs/: E2E_CHECKLIST.md  FACTUAL_GROUNDING.md  FOLDER_RENAME_GUIDE.md  KILLER_USE_CASE.md  LAUNCH_DRAFTS.md  PLUGIN_INSTALL.md  TEAM_MODE_GUIDE.md
personas/: baek-sun-ah.md  dhh.md  ju-ji-hoon.md  naval_ravikant.md  paul_graham.md  sample_private.md
scripts/: build_docx_skill.js  setup.py  simulation_to_docs.py
src/persona_builder/: __init__.py  cli.py
src/persona_builder/ingest/: audio.py  collect.py  documents.py  web.py  youtube.py
src/persona_studio/: cli.py
src/persona_studio/grounding/: __init__.py  annotator.py  audit.py  claims.py  config.py  cove.py  retriever.py  session.py  types.py  verifier.py  verify_claims.py
src/persona_studio/ingest/: __init__.py  audio.py  collect.py  documents.py  youtube.py
src/persona_studio/web/: __init__.py  __main__.py  personas.py  server.py  simulations.py
tests/: test_cli.py  test_cli_fetch_youtube.py  test_cli_smoke.py  test_collect.py  test_collect_branches.py  test_collect_integration.py  test_documents.py  test_setup.py  test_web.py  test_youtube.py
tests/grounding/: test_annotator.py  test_audit.py  test_claims.py  test_config.py  test_cove.py  test_retriever.py  test_session.py  test_verifier.py  test_verify_claims_cli.py
tests/web/: test_api_personas.py  test_api_simulations.py  test_main_entrypoint.py  test_server.py  test_web_prototype.py
web/: CONTRIBUTING.md  README.md  hifi-atoms.jsx  hifi-auth-screens.jsx  hifi-avatars.jsx  hifi-home.jsx  hifi-library.jsx  hifi-live-animated.jsx  hifi-live-animated.v1.jsx.bak  hifi-live.jsx  hifi-results.jsx  hifi-v2-screens.jsx  hifi-v2.html  hifi.html  index.html  landing.html  wireframes-screens.jsx  wireframes.html
web/docs/: HANDOFF.md
(+14 files in other folders)
