[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona-builder"
version = "0.1.0"
description = "ETL pipeline that turns heterogeneous source material into a single markdown corpus for persona synthesis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Human AI Agent Creator" }]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.9",
    "faster-whisper>=1.0",
    "yt-dlp>=2024.4.9",
    "youtube-transcript-api>=0.6.2",
    "httpx>=0.27",
]

[project.scripts]
persona-builder = "persona_builder.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_builder"]

[tool.hatch.build.targets.sdist]
include = ["src/persona_builder", "README.md", "LICENSE"]
